# any-song

./: .gitignore  BACKEND_MIGRATION_NOTES.md  DOCKER.md  README.md  docker-compose.yml  env.example  package-lock.json  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  audio_synch.py  go.mod  go.sum  karaokefy.py  requirements.txt
backend/cmd/: main.go
backend/data_roots/: requirements.txt
backend/internal/api/: api.go  artist_handler.go  auth_handler.go  download_handler.go  lyrics_handler.go  middlewares.go  router.go  transcription_handler.go  user_handler.go
backend/internal/config/: firebase.go
backend/internal/models/: artist.go  gender.go  song.go  user.go
backend/internal/service/: artist_service.go  cache_service.go  google_cloud_storage_service.go  user_service.go
backend/internal/storage/gcs/: google_cloud_storage.go
backend/internal/storage/postgres/: postgres.go
backend/internal/storage/redis/: redis.go
backend/lsync/: util.py
backend/src/: app.py
backend/src/database/: __init__.py  postgres.py
backend/src/models/: __init__.py  token_model.py  user_model.py  user_schemas.py
backend/src/routes/: user_routes.py
backend/utils/: backing_track.py  catch_lyrics.py  cochichando.py  main.py  song_name.py  yt_downloader.py
backend/utils/lyrics/: Até Ontem Seu Pereira e Coletivo 401.json  seu_pereira_e_coletivo_401.json  seu_pereira_e_coletivo_401.txt
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/components/about/: About.js  About.module.css
frontend/src/components/home/: Home.js  Home.module.css
frontend/src/components/karaoke/: Karaoke.js  Karaoke.module.css
frontend/src/components/profile/: Profile.js  Profile.module.css  UserProfile.js  UserProfile.module.css
frontend/src/components/search/: Search.js  Search.module.css
frontend/src/components/upload/: Upload.js  Upload.module.css
frontend/src/contexts/: AuthContext.js
frontend/src/lib/: firebase.js
frontend/src/pages/: _document.js  about.js  karaoke.js  profile.js
frontend/src/styles/: globals.css
output/lrc/: seu_pereira_e_coletivo_401____.lrc
output/words/: seu_pereira_e_coletivo_401.csv
